--- a/WebContent/app/views/partials/docente/partialDocenteInfoPersonal.html
+++ b/WebContent/app/views/partials/docente/partialDocenteInfoPersonal.html
@@ -3,32 +3,24 @@
 		<h5 class="panel-title">Información Personal</h5>
 	</div>
 	<div class="panel-body bg-success">
+		<!-- Nombre y Apellido -->
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-5">
 				<div class="form-group">
+					<label for="nombre">Nombre</label>
 					<input type="text" class="form-control text-capitalize" id="nombre" name="nombre" ng-model="nombre" placeholder="Nombre">
 				</div>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-5">
 				<div class="form-group">
+					<label for="apellido">Apellido</label>
 					<input type="text" class="form-control text-capitalize" id="apellido" name="apellido" ng-model="apellido" placeholder="Apellido">
 				</div>
 			</div>
 		</div>
+		<!-- Fecha Nacimiento -->
 		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group form-inline">
-					<div class="form-group" ng-init="listarTiposDoc()">
-						<label class="radio-inline" ng-repeat="tipoDoc in tiposDoc"> 
-							<input type="radio" id="tipoDocSel" name="tipoDocSel" value="{{tipoDoc.id}}" ng-blur="rellenarDNICuil()" ng-model="$parent.tipoDocSel"> {{tipoDoc.nombre}}
-						</label>
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="numeroDoc" name="numeroDoc" ng-model="numeroDoc" maxlength="8" placeholder="Número" ng-blur="rellenarDNICuil()">
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-5">
 				<div class="form-group form-inline">
 					<div class="form-group">
 						<label for="fechaNac" class="control-label pull-left">Fecha de Nacimiento</label>
@@ -44,7 +36,20 @@
 				</div>
 			</div>
 		</div>
+		<!-- Tipo Documento y CUIL -->
 		<div class="row">
+			<div class="col-sm-5">
+				<div class="form-group form-inline">
+					<div class="form-group" ng-init="listarTiposDoc()">
+						<label class="radio-inline" ng-repeat="tipoDoc in tiposDoc"> 
+							<input type="radio" id="tipoDocSel" name="tipoDocSel" value="{{tipoDoc.id}}" ng-blur="rellenarDNICuil()" ng-model="$parent.tipoDocSel"> {{tipoDoc.nombre}}
+						</label>
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" id="numeroDoc" name="numeroDoc" ng-model="numeroDoc" maxlength="8" placeholder="Número" ng-blur="rellenarDNICuil()">
+					</div>
+				</div>
+			</div>
 			<div class="col-sm-6">
 				<div class="form-group form-inline">
 					<div class="form-group">
@@ -56,7 +61,7 @@
 							<span class="input-group-addon" id="basic-addon1">-</span>
 							<input class="form-control text-center" type="text" name="cuil" ng-model="numeroDocCuil" placeholder="DNI" maxlength="8" ng-blur="validarCuit(cuilTipoSel, numeroDocCuil)">
 							<span class="input-group-addon" id="basic-addon1">-</span>
-							<select class="form-control" ng-options="validadorCuil for validadorCuil in validadoresCuil" ng-model="cuilValidadorSel"></select>
+							<select class="form-control" ng-options="validadorCuil for validadorCuil in validadoresCuil" ng-model="cuilValidadorSel" disabled></select>
 						</div>
 					</div>
 				</div>
