- docente FUNCIONANDO - infoadministrativa combinada con documentacion, lleve los checks de documentacion a infoadministrativa - desempeño recien empezado

--- a/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
+++ b/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
@@ -106,5 +106,52 @@
 				</div>
 			</div>
 		</div>
+		<!-- Documentacion Entregada -->
+		<div class="row col-sm-4">
+			<!-- Panel -->
+			<div class="panel panel-danger">
+				<!-- Panel Header -->
+				<div class="panel-heading">
+					<h4 class="panel-title">Documentacion Entregada</h4>
+				</div>
+				<div class="panel-body bg-warning">
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.ddjj"> Declaración Jurada
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.fotoDoc"> Fotocopia DNI
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.cuil"> CUIL
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.cv"> CV
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.titulos"> Titulos
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.certAnte"> Certificado de Antecedentes
+						</label>
+					</div>
+					<div class="checkbox">
+						<label>
+						  <input type="checkbox" value="" ng-model="infoAdministrativa.certReinc"> Certificado de Reincidencia
+						</label>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
