--- a/WebContent/app/views/layout/menu.html
+++ b/WebContent/app/views/layout/menu.html
@@ -21,6 +21,7 @@
 					</a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="#/docentes">Docentes</a></li>
+							<li><a href="#/desempenios">Desempeño</a></li>
 						</ul></li>
 					<li class="dropdown"><a href="" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-expanded="false">Planes
