--- a/WebContent/app/views/layout/modal-alert.html
+++ b/WebContent/app/views/layout/modal-alert.html
@@ -1,5 +1,4 @@
-<div class="modal fade" id="message-modal" tabindex="-1" role="dialog"
-	aria-labelledby="message-modal" aria-hidden="true">
+<div class="modal fade" id="message-modal" tabindex="-1" role="dialog" aria-labelledby="message-modal" aria-hidden="true" ng-show="logueado">
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-header">
