--- a/WebContent/app/views/partials/docente/partialDocenteDomicilios.html
+++ b/WebContent/app/views/partials/docente/partialDocenteDomicilios.html
@@ -1,4 +1,4 @@
-<div class="panel panel-warning">
+<div class="panel panel-warning" ng-show="logueado">
 	<div class="panel-heading">
 		<h5 class="panel-title">Domicilios</h5>
 	</div>
