--- a/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
+++ b/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
@@ -1,4 +1,4 @@
-<div class="panel panel-success">
+<div class="panel panel-success" ng-show="logueado">
 	<div class="panel-heading">
 		<h5 class="panel-title">Empleos</h5>
 	</div>
