--- a/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
+++ b/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
@@ -1,4 +1,4 @@
-<div class="panel panel-danger">
+<div class="panel panel-danger" ng-show="logueado">
 	<div class="panel-heading">
 		<h5 class="panel-title">Información Administrativa</h5>
 	</div>
