--- a/WebContent/app/views/partials/docente/partialDocenteMediosContacto.html
+++ b/WebContent/app/views/partials/docente/partialDocenteMediosContacto.html
@@ -1,4 +1,4 @@
-<div class="panel panel-info">
+<div class="panel panel-info" ng-show="logueado">
 	<div class="panel-heading">
 		<h5 class="panel-title">Medios de Contacto</h5>
 	</div>
