--- a/WebContent/app/views/desempenios.html
+++ b/WebContent/app/views/desempenios.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-show="logueado">
 	<!-- Page Header -->
 	<page-header></page-header>
 	<!-- Alert Modal -->
@@ -47,6 +47,10 @@
 				      <input type="number" class="form-control" id="hcs" placeholder="HCS" ng-model="hcs" max="22" min="0">
 				      <div class="input-group-addon">HCS</div>
 				    </div>
+					<div class="form-group input-group">
+				      <input type="number" class="form-control" id="faltas" placeholder="Inasistencias" ng-model="faltas" max="30" min="0">
+				      <div class="input-group-addon">HCS</div>
+				    </div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
@@ -75,6 +79,7 @@
 							<td><em>Año</em></td>
 							<td><em>Mes</em></td>
 							<td><em>HCS</em></td>
+							<td><em>Inasistencias</em></td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -86,6 +91,7 @@
 							<td><strong>{{desempenio.anio}}</strong></td>
 							<td><strong>{{meses[indiceDe(meses, desempenio.mes, 'value')].nombre}}</strong></td>
 							<td><strong>{{desempenio.hcs}}</strong></td>
+							<td><strong>{{desempenio.faltas}}</strong></td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(desempenio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(desempenio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
