- tipos ctrl: borro funcion editar() y cierro form al guardar - menu: salir > cerrar sesion, Motivos baja > Motivo - login: mensaje bienvenida - partial docente info personal: +localidad, +cp - persistence.xml: plan estudio - root-context.xml: plan estudio dao - usuarios FUNCIONANDO - plan estudio FUNCIONANDO

--- a/WebContent/app/views/desempenios.html
+++ b/WebContent/app/views/desempenios.html
@@ -30,27 +30,35 @@
 							<option value="">-- Asignatura --</option>
 						</select>
 					</div>
-					<div class="form-group col-sm-4">
-						<select class="form-control" ng-options="mes.nombre for mes in meses" required ng-model="mesSel">
-							<option value="">-- Mes --</option>
-						</select>
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<select class="form-control" ng-options="mes.nombre for mes in meses" required ng-model="mesSel">
+								<option value="">-- Mes --</option>
+							</select>
+						</div>
+						<div class="form-group form-inline col-sm-4">
+				            <p class="input-group">
+				              <input placeholder="Año" type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="anioSel" is-open="openedAnio" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
+				              <span class="input-group-btn">
+				                <button type="button" class="btn btn-default" ng-click="openAnio($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+				              </span>
+				            </p>
+						</div>
 					</div>
-					<div class="form-group form-inline col-sm-4">
-			            <p class="input-group">
-			              <input type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="anioSel" is-open="openedAnio" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
-			              <span class="input-group-btn">
-			                <button type="button" class="btn btn-default" ng-click="openAnio($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-			              </span>
-			            </p>
+					<div class="row">
+						<div class="form-group col-sm-5">
+							<div class="input-group">
+						      	<input type="number" class="form-control" id="hcs" placeholder="HCS" ng-model="hcs" max="22" min="0">
+						      	<div class="input-group-addon">HCS Mensuales</div>
+						    </div>
+						</div>
+						<div class="form-group col-sm-5">
+							<div class="input-group">
+						      	<input type="number" class="form-control" id="faltas" placeholder="Hs" ng-model="faltas" max="50" min="0">
+						      	<div class="input-group-addon">Inasistencias</div>
+						    </div>
+					    </div>
 					</div>
-					<div class="form-group input-group">
-				      <input type="number" class="form-control" id="hcs" placeholder="HCS" ng-model="hcs" max="22" min="0">
-				      <div class="input-group-addon">HCS</div>
-				    </div>
-					<div class="form-group input-group">
-				      <input type="number" class="form-control" id="faltas" placeholder="Inasistencias" ng-model="faltas" max="30" min="0">
-				      <div class="input-group-addon">HCS</div>
-				    </div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
