--- a/WebContent/app/views/login.html
+++ b/WebContent/app/views/login.html
@@ -3,7 +3,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h1 class="text-center">Bienvenido!</h1>
+				<h1 class="text-center">Bienvenido a GeDoP!</h1>
 			</div>
 			<div class="modal-body">
 				<div class="form-group">
